# EduRAG

./: README.md  main.py  pyproject.toml  template.py
src/: document_loader.py  embeddings_manager.py  vector_store.py
utils/: config_file.py
workflows/: retrive_workflow.py  upsert_workflow.py
