[project]
name = "rag-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.3.0",
    "dotenv>=0.9.9",
    "fastapi>=0.120.3",
    "langchain>=1.0.3",
    "langgraph>=1.0.2",
    "openai>=2.6.1",
    "pydantic>=2.12.3",
    "pypdf2>=3.0.1",
    "qdrant-client>=1.15.1",
    "requests>=2.32.5",
    "sentence-transformers>=5.1.2",
    "streamlit>=1.51.0",
    "uvicorn>=0.38.0",
    "voyageai>=0.3.5",
]
